--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/node": "^22.2.0",
+    "axios": "^1.7.3",
     "emoji-picker-react": "^4.11.1",
     "framer-motion": "^11.3.24",
+    "hex-rgb": "^5.0.0",
     "react": "^18.3.1",
     "react-color-palette": "^7.2.2",
     "react-countdown": "^2.3.6",
